# JaamCode

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 04fa72ce79d8_add_users_table.py  8baa680e75e5_initial.py  eb837aeb3507_add_users_table.py
backend/app/: main.py
backend/app/core/config/: settings.py
backend/app/core/database/: session.py  transaction.py
backend/app/core/exceptions/: base.py  handlers.py
backend/app/core/logging/: logger.py
backend/app/core/middleware/: request_id.py
backend/app/core/utils/: deps.py  uow_dep.py
backend/app/modules/users/repository/: user_repository.py
backend/app/modules/users/service/: user_service.py
backend/app/shared/models/: mixins.py  user.py
backend/app/shared/repository/: base.py
backend/app/shared/uow/: unit_of_work.py
backend/tests/: conftest.py  test_health.py  test_uow.py
